--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "node"
 after_script:
-  - grunt release
+  - grunt
   - cd ./dist
   - git init
   - git config user.name "${USER_NAME}"
